[gd_scene load_steps=14 format=2]

[ext_resource path="res://Images/Characters/EdieCharacter.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CharacterScript/PlayerScript.gd" type="Script" id=2]
[ext_resource path="res://Images/UI/PlayerIndicator.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 3.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3.5, 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3.5, 4 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4, 3.5 )

[sub_resource type="Animation" id=10]
resource_name = "Hover"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, -9 ), Vector2( 0, -10 ), Vector2( 0, -9 ), Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="EdieCharacter" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="NorthCheckArea" type="Area2D" parent="."]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthCheckArea"]
position = Vector2( 0, 0.5 )
shape = SubResource( 6 )

[node name="EastCheckArea" type="Area2D" parent="."]
position = Vector2( 8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastCheckArea"]
position = Vector2( -0.5, 0 )
shape = SubResource( 7 )

[node name="WestCheckArea" type="Area2D" parent="."]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestCheckArea"]
position = Vector2( 0.5, 0 )
shape = SubResource( 8 )

[node name="SouthCheckArea" type="Area2D" parent="."]
position = Vector2( 0, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthCheckArea"]
position = Vector2( 0, -0.5 )
shape = SubResource( 9 )

[node name="PlayerIndicator" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerIndicator"]
autoplay = "Hover"
anims/Hover = SubResource( 10 )
anims/RESET = SubResource( 11 )

[connection signal="body_entered" from="NorthCheckArea" to="." method="_on_NorthCheckArea_body_entered"]
[connection signal="body_exited" from="NorthCheckArea" to="." method="_on_NorthCheckArea_body_exited"]
[connection signal="body_entered" from="EastCheckArea" to="." method="_on_EastCheckArea_body_entered"]
[connection signal="body_exited" from="EastCheckArea" to="." method="_on_EastCheckArea_body_exited"]
[connection signal="body_entered" from="WestCheckArea" to="." method="_on_WestCheckArea_body_entered"]
[connection signal="body_exited" from="WestCheckArea" to="." method="_on_WestCheckArea_body_exited"]
[connection signal="body_entered" from="SouthCheckArea" to="." method="_on_SouthCheckArea_body_entered"]
[connection signal="body_exited" from="SouthCheckArea" to="." method="_on_SouthCheckArea_body_exited"]
